--- a/package.json
+++ b/package.json
@@ -1,55 +1,38 @@
 {
   "name": "sheppek-leppek-inventory",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
   "private": true,
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
-    "dev": "EXPO_NO_TELEMETRY=1 npx expo start",
-    "build:web": "npx expo export --platform web",
-    "lint": "npx expo lint"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@expo-google-fonts/inter": "^0.2.2",
-    "@expo-google-fonts/poppins": "^0.2.2",
-    "@expo/vector-icons": "^14.0.0",
-    "@lucide/lab": "^0.1.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "expo": "~50.0.4",
-    "expo-blur": "~12.9.1",
-    "expo-camera": "~13.6.0",
-    "expo-constants": "~15.4.5",
-    "expo-file-system": "~16.0.5",
-    "expo-font": "~11.10.2",
-    "expo-haptics": "~12.8.1",
-    "expo-linear-gradient": "~12.7.1",
-    "expo-linking": "~6.2.2",
-    "expo-mail-composer": "~12.7.1",
-    "expo-router": "~3.4.6",
-    "expo-sharing": "~11.10.0",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-symbols": "^0.2.2",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
-    "firebase": "^10.10.0",
-    "lucide-react-native": "^0.475.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "^4.10.0",
-    "react-native-svg": "14.1.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.6",
-    "react-native-webview": "13.6.3"
+    "firebase": "^10.14.1",
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.22.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@expo/webpack-config": "^19.0.1",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.3.0"
+    "@eslint/js": "^9.9.1",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2"
   }
 }
